--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,11 @@ services:
       - mysql
       - redis
       - elasticsearch
+    healthcheck:
+      test: bash -c "[ -f /var/www/.composer_installed ] && [ -f /var/www/.migrations_executed ] &&  [ -f /var/www/.env ]"
+      interval: 1m
+      timeout: 5s
+      retries: 30
 
   mysql:
     image: mysql:5.7
@@ -54,7 +59,8 @@ services:
       pastelaria-network:
           ipv4_address: 172.30.0.102
     depends_on:
-      - api
+      api:
+        condition: service_healthy
 
   elasticsearch:
     image: elasticsearch:7.10.1
