--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,8 @@
         ],
         "format": "./vendor/bin/pint",
         "analyse": "./vendor/bin/phpstan analyse --memory-limit=2G",
-        "test": "./vendor/bin/phpunit"
+        "test": "./vendor/bin/phpunit",
+        "coverage": "./vendor/bin/phpunit --coverage-html=public/reports"
     },
     "extra": {
         "laravel": {
