--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "larastan/larastan": "^2.0",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
-        "nunomaduro/larastan": "^2.0",
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0"
     },
@@ -55,6 +55,7 @@
             "@php artisan key:generate --ansi"
         ],
         "format": "./vendor/bin/pint",
+        "format:test": "./vendor/bin/pint --test",
         "analyse": "./vendor/bin/phpstan analyse --memory-limit=2G",
         "test": "./vendor/bin/phpunit",
         "coverage": "./vendor/bin/phpunit --coverage-html=public/reports"
